@@ -100,6 +100,9 @@ http://sourceforge.net/tracker/index.php?func=detail&aid=<id>&group_id=5470&atid
 
 - #125375 - parsermodule.c - fix parser.tuple2ast() failure on valid parse tree
 
+- mpzmodule.c - make .binary() work on 64-bit system, make it compile with 
+  Cygwin
+
 What's New in Python 2.0?
 =========================
 
